# CPP-Projects-BMSTU

build-untitled-Qt6-Debug/: Makefile  dz_2  moc_mainwindow.cpp  ui_mainwindow.h  untitled
dz_2/: CMakeLists.txt  database.csv  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  student.cpp  student.h  untitled.pro  untitled.pro.user.90d1764.4.8-pre1
dz_2/attendance/: CMakeLists.txt  attendance.cpp  attendance.h  attendance.ui  main.cpp
dz_2/attendance_/: attendance.cpp  attendance.h  attendance.ui  attendance_.pro  main.cpp
dz_2/build-attendance_-Desktop_Qt_5_12_12_MinGW_32_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
dz_2/build-attendance_-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_attendance.h
dz_3/: CMakeLists.txt  func.cpp  func.h  language.cpp  language.h  main.cpp
lab_1/: CMakeLists.txt  auto.cpp  auto.hpp  main.cpp  test.cpp
lab_2/: CMakeLists.txt  Vector.cpp  Vector.hpp  main.cpp  vector_.cpp
lab_3/: CMakeLists.txt  Vector_2D.cpp  Vector_2D.h  Vector_3D.cpp  Vector_3D.h  main.cpp  test.cpp
lab_4/: CMakeLists.txt  Deposit.cpp  Deposit.h  main.cpp  test.cpp
lab_5/: CMakeLists.txt  Deposit.cpp  Deposit.h  filling_input.cpp  main.cpp
lab_6/: CMakeLists.txt  TimeClass.cpp  TimeClass.h  main.cpp  test.cpp
lab_7/: CMakeLists.txt  main.cpp  main1.cpp  main1_1.cpp  main1_2.cpp  main2.cpp  main3.cpp  main4.cpp
lab_8/: Auto.cpp  Auto.hpp  CMakeLists.txt  MyShared.h  MyUnique.h  main.cpp
(+8 files in other folders)
